# OCASI

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
OCASI/: CMakeLists.txt
OCASI-Tester/: CMakeLists.txt
OCASI-Tester/src/: Test.cpp
OCASI/src/OCASI/Core/: Base.h  BaseImporter.h  BasePostProcess.cpp  BasePostProcess.h  BinaryReader.cpp  BinaryReader.h  Debug.h  Error.h  FileUtil.cpp  FileUtil.h  Image.cpp  Image.h  Importer.cpp  Importer.h  Logger.cpp  Logger.h  Material.cpp  Material.h  Mesh.h  Model.h  PostProcessor.cpp  PostProcessor.h  PostProcessorOptions.h  Scene.h  StringUtil.cpp  StringUtil.h
OCASI/src/OCASI/Importers/: ObjImporter.cpp  ObjImporter.h
OCASI/src/OCASI/Importers/GLTF2/: Asset.cpp  Asset.h  GLTFImporter.cpp  GLTFImporter.h  Json.h  JsonParser.cpp  JsonParser.h  TextFileParser.cpp  TextFileParser.h
OCASI/src/OCASI/PostProcessing/: ConverToRHCProcess.cpp  ConverToRHCProcess.h  GenerateNormalsProcess.cpp  GenerateNormalsProcess.h  TriangulateProcess.cpp  TriangulateProcess.h
Tester/: CMakeLists.txt
Tester/Resources/: Mushroom_smartUVs_01.mtl
Tester/Resources/GLTF/: Mushroom.glb  Mushroom.gltf
Tester/src/: Test.cpp
Tests/: CMakeLists.txt
Tests/src/: Test.cpp
